--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "blacksmith-project/dr-watson": "^0.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
