--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "blacksmith-project/dr-watson": "^0.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3",
+        "phpunit/phpunit": "^8.1",
         "mnapoli/pretty": "^1.0",
-        "phpstan/phpstan": "^0.10",
+        "phpstan/phpstan": "^0.11",
         "escapestudios/symfony2-coding-standard": "^3.4",
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.3",
+        "infection/infection": "^0.13.6"
     },
     "autoload": {
         "psr-4": {
